src/test/deca/context/invalid/operations/modulo/invalid_op_mod_float_right.deca
// Description:
//    test invalid MOD between float and int
//
// [Begin Result]
//invalid_op_mod_float_right.deca:12:15: Unsupported operation '%' between types int and float. Operation '%' supported only between integers. (Rule 3.33)
// [End Result]
//
// Historique:
//    cree le 02/01/2025

{
    print(4545 % 2.1);
}